2001-09-08  Norris Boyd  <nboyd@atg.com>

	* src/bytecode.cpp: Follow-on patch to the previous, to cover
	jsr_w as well - patch 177.

2001-09-08  Norris Boyd  <nboyd@atg.com>

	* src/bytecode.h:
	* src/bytecode.cpp: Instrument wide jump capabilities into
	branches.  For branching opcodes like ifeq, if the branch offset
	requires more than two bytes, generate a branch around a
	goto_w. Uses the hueristic of the number of tokens branched over,
	to avoid the difficulty of regenerating or patching code in order
	to insert the additional goto_w op - patch 167, from bug 161.

2001-09-08  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessSynchronizedStatement, ProcessIfStatement):
	Detect illegal synchronized(null){}, bug 1882, and clean up
	impossible check for statements that complete normally - patch 182.

2001-09-08  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (UpdateGeneratedLocalConstructor): 
	Removed the cause of a core dump when a method omits a
	return type in a local class - patch 91, from bug 179.
	* src/error.h:
	* src/error.cpp (PrintMISSPELLED_CONSTRUCTOR_NAME): 
	Added an error to differentiate between behavior
	taken when bad constructor is interpreted as
	misspelling instead of missing return type.
	Improved the wording of various constructor-related
	error messages.
	* src/decl.cpp (ProcessConstructorDeclaration): 
	Added some better handling of misspelled name vs.
	missing return type.
	* src/spell.h (Spell): Added some documentation
	to better explain this (useful) class.

2001-09-08  Eric Blake  <ebb9@email.byu.edu>

	* src/jikesapi.cpp (JikesOption): Attempt a workaround to a segv
	encountered with bad encoding from patch 168.

2001-09-07  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessMembers, ProcessFieldDeclaration)
	(ProcessMethodDeclaration, ProcessStaticInitializers): Improve the
	error handling of inner classes and static members - patch 86,
	from bugs 247, 343, 348, 349.
	* src/error.h: